# esa_tf

./: .gitignore  README.md
.github/workflows/: platform-on-push.yml  restapi-on-push.yml
esa_tf/: .env  Makefile  README.md  docker-compose.yml
esa_tf/nginx/: default.conf.template  nginx.conf
esa_tf/nginx/njs/: oidc.js
esa_tf/nginx/templates/: default.conf.template
esa_tf_platform/: Dockerfile  MANIFEST.in  Makefile  environment.yml  environment_eopf.yml  pyproject.toml  setup.cfg  setup.py
esa_tf_platform/esa_tf_platform/: __init__.py  config.py  esa_tf_plugin_eopf.py  esa_tf_plugin_sen2cor.py  logger_setup.py  product_dowload.py  product_download.py  resources_monitor.py  traceability.py  workflows.py
esa_tf_platform/esa_tf_platform/esa_tf_plugin_sen2cor/: __init__.py
esa_tf_platform/esa_tf_platform/platform/: __init__.py  workflows.py
esa_tf_platform/esa_tf_platform/resources/: L2A_GIPP.xml  eopf_convert_cli.py  eopf_safe_to_zarr_cli.py
esa_tf_platform/esa_tf_plugin_sen2cor/: workflows_config.py
esa_tf_platform/esa_tf_sen2cor/: workflows_config.py
esa_tf_platform/tests/: integration_test_40_download.py  integration_test_50_download.py  integration_test_50_eopf_plugin.py  test_20_workflows.py  test_30_download_api.py  test_esa_tf_plugin_sen2cor.py  test_workflows.py
esa_tf_restapi/: Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
esa_tf_restapi/esa_tf_restapi/: __init__.py  api.py  auth.py  config.py  dependencies.py  logger_setup.py  models.py  odata.py  routes.py  traceability.py  transformation_orders.py
esa_tf_restapi/esa_tf_restapi/csdl/: __init__.py  metadata.xml
esa_tf_restapi/esa_tf_restapi/routes/: __init__.py  admin.py  user.py
esa_tf_restapi/tests/: client_test_routes.py  integration_test_50_eopf_plugin.py  test_api.py  test_models.py  test_odata.py  test_routes.py  test_transformation_orders.py  test_workflows.py
notebooks/: TF_REST_API.ipynb  TF_Worflkow_Plugin_Interface.ipynb  Transformation_Framework_Demo.ipynb  Workflow_definition.ipynb  download_api_test.ipynb
