[metadata]
name = esa_tf_platform
author = B-Open
author_email = software@bopen.eu
license = GNU Affero General Public License v3.0
description = ESA Transformation Framework Platform
url = https://github.com/SercoSPA/esa_tf
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pkg_resources

include_package_data = True

[options.extras_require]
tests = pytest;

[options.entry_points]
 esa_tf.plugin =
    sen2cor_l1c_l2a = esa_tf_plugin_sen2cor.sen2cor_l1c_l2a
