[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
description = "ESA Transformation Framework REST API"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "esa_tf_restapi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "odata-query"
]

[project.optional-dependencies]
tests = ["pytest", "fastapi[all]"]

[tool.coverage.run]
branch = true
omit = ["setup.py", "tests/test_*.py"]

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
