[metadata]
name = esa_tf_restapi
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = ESA Transformation Framework REST API
url = https://github.com/SercoSPA/esa_tf
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fastapi
include_package_data = True
