[metadata]
name = esa_tf_restapi
author = B-Open
author_email = software@bopen.eu
license = GNU Affero General Public License v3.0
description = ESA Transformation Framework REST API
url = https://github.com/SercoSPA/esa_tf
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fastapi
tests_require =
    pytest
    fastapi[all]
include_package_data = True

[options.extras_require]
tests = pytest; fastapi[all]